--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "rsync-time-backup"]
 	path = rsync-time-backup
-	url = https://github.com/laurent22/rsync-time-backup
+	url = https://github.com/llldagolll/rsync-time-backup.git
